--- a/index.html
+++ b/index.html
@@ -14,3 +14,54 @@
             <div class="question">
                 <p>1. Does this person often dominate conversations and rarely show interest in what others have to say?</p>
                 <label><input type="radio" name="q1" value="3"> Often</label>
+                <label><input type="radio" name="q1" value="2"> Sometimes</label>
+                <label><input type="radio" name="q1" value="1"> Rarely</label>
+                <label><input type="radio" name="q1" value="0"> Never</label>
+            </div>
+
+            <!-- Question 2 -->
+            <div class="question">
+                <p>2. When you share your achievements or feelings, how does this person typically respond?</p>
+                <label><input type="radio" name="q2" value="3"> They change the topic to themselves</label>
+                <label><input type="radio" name="q2" value="2"> They dismiss my feelings</label>
+                <label><input type="radio" name="q2" value="1"> They show jealousy or hostility</label>
+                <label><input type="radio" name="q2" value="0"> They show genuine interest</label>
+            </div>
+
+            <!-- Question 3 -->
+            <div class="question">
+                <p>3. How often does this person lie or exaggerate the truth?</p>
+                <label><input type="radio" name="q3" value="3"> Very often</label>
+                <label><input type="radio" name="q3" value="2"> Occasionally</label>
+                <label><input type="radio" name="q3" value="1"> Rarely</label>
+                <label><input type="radio" name="q3" value="0"> Never</label>
+            </div>
+
+            <!-- Question 4 -->
+            <div class="question">
+                <p>4. Does this person tend to blame others for their problems or shortcomings?</p>
+                <label><input type="radio" name="q4" value="3"> Very often</label>
+                <label><input type="radio" name="q4" value="2"> Occasionally</label>
+                <label><input type="radio" name="q4" value="1"> Rarely</label>
+                <label><input type="radio" name="q4" value="0"> Never</label>
+            </div>
+
+            <!-- Question 5 -->
+            <div class="question">
+                <p>5. How does this person react when others are upset or in distress?</p>
+                <label><input type="radio" name="q5" value="3"> Indifferent or dismissive</label>
+                <label><input type="radio" name="q5" value="2"> Angry</label>
+                <label><input type="radio" name="q5" value="1"> Self-centered response</label>
+                <label><input type="radio" name="q5" value="0"> Supportive and empathetic</label>
+            </div>
+
+            <!-- Add more questions here using the same format -->
+
+            <button type="button" onclick="calculateScore()">Submit</button>
+        </form>
+        <div id="result"></div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
