--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <div class="container">
         <h1>Relationship Screening Questionnaire</h1>
         <form id="questionnaire">
-            <!-- Existing Questions (1-5) -->
             <!-- Question 1 -->
             <div class="question">
                 <p>1. Does this person often dominate conversations and rarely show interest in what others have to say?</p>
@@ -56,27 +55,16 @@
                 <label><input type="radio" name="q5" value="0"> Supportive and empathetic</label>
             </div>
 
-            <!-- New Question 6 -->
-            <div class="question">
-                <p>6. How quickly did this person express intense feelings or use terms like "soulmate" or "destiny"?</p>
-                <label><input type="radio" name="q6" value="3"> Almost immediately, within days or weeks.</label>
-                <label><input type="radio" name="q6" value="2"> After a few months.</label>
-                <label><input type="radio" name="q6" value="1"> Only after we got to know each other well.</label>
-                <label><input type="radio" name="q6" value="0"> They haven't used those terms.</label>
-            </div>
-
-            <!-- Add all new questions following the same structure -->
+            <!-- Continue adding questions up to Question 30 using the same format -->
             
-            <!-- Example for New Question 7 -->
+            <!-- Question 30 -->
             <div class="question">
-                <p>7. Does this person often tell you that you're the only one who truly understands them, even early on in the relationship?</p>
-                <label><input type="radio" name="q7" value="3"> Yes, frequently, from the beginning.</label>
-                <label><input type="radio" name="q7" value="2"> Occasionally, but not excessively.</label>
-                <label><input type="radio" name="q7" value="1"> Rarely, only in deeper conversations.</label>
-                <label><input type="radio" name="q7" value="0"> No, they haven't expressed that.</label>
+                <p>30. How does this person react when they see someone else getting attention or recognition?</p>
+                <label><input type="radio" name="q30" value="3"> They become visibly upset or jealous.</label>
+                <label><input type="radio" name="q30" value="2"> They make sarcastic or critical remarks.</label>
+                <label><input type="radio" name="q30" value="1"> They are happy for others and show support.</label>
+                <label><input type="radio" name="q30" value="0"> They seem indifferent.</label>
             </div>
-
-            <!-- Continue adding up to Question 30 -->
 
             <button type="button" onclick="calculateScore()">Submit</button>
         </form>
