--- a/index.html
+++ b/index.html
@@ -55,8 +55,38 @@
                 <label><input type="radio" name="q5" value="0"> Supportive and empathetic</label>
             </div>
 
-            <!-- Continue adding questions up to Question 30 using the same format -->
+            <!-- Question 6 -->
+            <div class="question">
+                <p>6. How quickly did this person express intense feelings or use terms like "soulmate" or "destiny"?</p>
+                <label><input type="radio" name="q6" value="3"> Almost immediately, within days or weeks.</label>
+                <label><input type="radio" name="q6" value="2"> After a few months.</label>
+                <label><input type="radio" name="q6" value="1"> Only after we got to know each other well.</label>
+                <label><input type="radio" name="q6" value="0"> They haven't used those terms.</label>
+            </div>
+
+            <!-- Add Questions 7 to 29 similarly -->
+            <!-- Placeholder for example purposes -->
             
+            <!-- Question 7 -->
+            <div class="question">
+                <p>7. How does this person react to criticism or being challenged?</p>
+                <label><input type="radio" name="q7" value="3"> They become angry or hostile.</label>
+                <label><input type="radio" name="q7" value="2"> They try to belittle the person who criticizes them.</label>
+                <label><input type="radio" name="q7" value="1"> They calmly consider the feedback.</label>
+                <label><input type="radio" name="q7" value="0"> They are indifferent.</label>
+            </div>
+
+            <!-- Repeat this pattern up to Question 29 -->
+
+            <!-- Question 29 -->
+            <div class="question">
+                <p>29. Does this person often make you feel guilty for doing things without them?</p>
+                <label><input type="radio" name="q29" value="3"> Yes, frequently, they imply I should spend all my time with them.</label>
+                <label><input type="radio" name="q29" value="2"> Occasionally, they make subtle comments about it.</label>
+                <label><input type="radio" name="q29" value="1"> Rarely, they respect my need for space.</label>
+                <label><input type="radio" name="q29" value="0"> Never, they encourage me to have my own life.</label>
+            </div>
+
             <!-- Question 30 -->
             <div class="question">
                 <p>30. How does this person react when they see someone else getting attention or recognition?</p>
