--- a/index.html
+++ b/index.html
@@ -64,9 +64,6 @@
                 <label><input type="radio" name="q6" value="0"> They haven't used those terms.</label>
             </div>
 
-            <!-- Add Questions 7 to 29 similarly -->
-            <!-- Placeholder for example purposes -->
-            
             <!-- Question 7 -->
             <div class="question">
                 <p>7. How does this person react to criticism or being challenged?</p>
@@ -76,7 +73,194 @@
                 <label><input type="radio" name="q7" value="0"> They are indifferent.</label>
             </div>
 
-            <!-- Repeat this pattern up to Question 29 -->
+            <!-- Question 8 -->
+            <div class="question">
+                <p>8. Does this person take advantage of others to get what they want?</p>
+                <label><input type="radio" name="q8" value="3"> Very often</label>
+                <label><input type="radio" name="q8" value="2"> Occasionally</label>
+                <label><input type="radio" name="q8" value="1"> Rarely</label>
+                <label><input type="radio" name="q8" value="0"> Never</label>
+            </div>
+
+            <!-- Question 9 -->
+            <div class="question">
+                <p>9. How often does this person show a lack of remorse or guilt after hurting someone?</p>
+                <label><input type="radio" name="q9" value="3"> Very often</label>
+                <label><input type="radio" name="q9" value="2"> Occasionally</label>
+                <label><input type="radio" name="q9" value="1"> Rarely</label>
+                <label><input type="radio" name="q9" value="0"> Never</label>
+            </div>
+
+            <!-- Question 10 -->
+            <div class="question">
+                <p>10. Does this person tend to manipulate situations or people for their benefit?</p>
+                <label><input type="radio" name="q10" value="3"> Very often</label>
+                <label><input type="radio" name="q10" value="2"> Occasionally</label>
+                <label><input type="radio" name="q10" value="1"> Rarely</label>
+                <label><input type="radio" name="q10" value="0"> Never</label>
+            </div>
+
+            <!-- Question 11 -->
+            <div class="question">
+                <p>11. How does this person react when they are caught lying or doing something wrong?</p>
+                <label><input type="radio" name="q11" value="3"> They deny everything, even with evidence.</label>
+                <label><input type="radio" name="q11" value="2"> They shift the blame to someone else.</label>
+                <label><input type="radio" name="q11" value="1"> They admit their mistake and apologize.</label>
+                <label><input type="radio" name="q11" value="0"> They laugh it off as if it's not serious.</label>
+            </div>
+
+            <!-- Question 12 -->
+            <div class="question">
+                <p>12. Does this person need constant admiration or affirmation from others?</p>
+                <label><input type="radio" name="q12" value="3"> Very often</label>
+                <label><input type="radio" name="q12" value="2"> Occasionally</label>
+                <label><input type="radio" name="q12" value="1"> Rarely</label>
+                <label><input type="radio" name="q12" value="0"> Never</label>
+            </div>
+
+            <!-- Question 13 -->
+            <div class="question">
+                <p>13. How does this person behave in relationships over time?</p>
+                <label><input type="radio" name="q13" value="3"> They start off charming and attentive but become controlling and critical.</label>
+                <label><input type="radio" name="q13" value="2"> They are consistently respectful and supportive.</label>
+                <label><input type="radio" name="q13" value="1"> They become more distant or indifferent.</label>
+                <label><input type="radio" name="q13" value="0"> They are unpredictable, sometimes loving and other times hostile.</label>
+            </div>
+
+            <!-- Question 14 -->
+            <div class="question">
+                <p>14. Does this person show empathy when others are suffering?</p>
+                <label><input type="radio" name="q14" value="3"> Never, they seem to enjoy others' pain.</label>
+                <label><input type="radio" name="q14" value="2"> Rarely, they are mostly indifferent.</label>
+                <label><input type="radio" name="q14" value="1"> Occasionally, they show some concern.</label>
+                <label><input type="radio" name="q14" value="0"> Often, they are very empathetic.</label>
+            </div>
+
+            <!-- Question 15 -->
+            <div class="question">
+                <p>15. Has this person ever threatened you or others to get what they want?</p>
+                <label><input type="radio" name="q15" value="3"> Yes, frequently</label>
+                <label><input type="radio" name="q15" value="2"> Yes, but only rarely</label>
+                <label><input type="radio" name="q15" value="1"> No, never</label>
+                <label><input type="radio" name="q15" value="0"> No, they would never threaten anyone</label>
+            </div>
+
+            <!-- Question 16 -->
+            <div class="question">
+                <p>16. How does this person react when they see someone else succeeding?</p>
+                <label><input type="radio" name="q16" value="3"> They become jealous and try to undermine them.</label>
+                <label><input type="radio" name="q16" value="2"> They show envy but don't act on it.</label>
+                <label><input type="radio" name="q16" value="1"> They are happy and supportive.</label>
+                <label><input type="radio" name="q16" value="0"> They are indifferent.</label>
+            </div>
+
+            <!-- Question 17 -->
+            <div class="question">
+                <p>17. Does this person often have "falling outs" or conflicts with friends and family?</p>
+                <label><input type="radio" name="q17" value="3"> Yes, very often</label>
+                <label><input type="radio" name="q17" value="2"> Occasionally</label>
+                <label><input type="radio" name="q17" value="1"> Rarely</label>
+                <label><input type="radio" name="q17" value="0"> No, never</label>
+            </div>
+
+            <!-- Question 18 -->
+            <div class="question">
+                <p>18. How does this person talk about their past relationships or friendships?</p>
+                <label><input type="radio" name="q18" value="3"> They blame the other person entirely for the relationship ending.</label>
+                <label><input type="radio" name="q18" value="2"> They admit to mutual issues.</label>
+                <label><input type="radio" name="q18" value="1"> They take responsibility for their part.</label>
+                <label><input type="radio" name="q18" value="0"> They speak positively about their past relationships.</label>
+            </div>
+
+            <!-- Question 19 -->
+            <div class="question">
+                <p>19. Does this person view themselves as superior to others?</p>
+                <label><input type="radio" name="q19" value="3"> Yes, they often express how they are better than others.</label>
+                <label><input type="radio" name="q19" value="2"> Occasionally, they make subtle hints about their superiority.</label>
+                <label><input type="radio" name="q19" value="1"> Rarely, only in certain contexts.</label>
+                <label><input type="radio" name="q19" value="0"> No, they treat everyone as equals.</label>
+            </div>
+
+            <!-- Question 20 -->
+            <div class="question">
+                <p>20. How does this person respond when you set a boundary or say 'no' to something they want?</p>
+                <label><input type="radio" name="q20" value="3"> They react angrily or try to convince me otherwise.</label>
+                <label><input type="radio" name="q20" value="2"> They seem annoyed but accept it.</label>
+                <label><input type="radio" name="q20" value="1"> They respect my boundary and move on.</label>
+                <label><input type="radio" name="q20" value="0"> They fully respect my decision.</label>
+            </div>
+
+            <!-- Question 21 -->
+            <div class="question">
+                <p>21. How does this person respond when you spend time with others or do things without them?</p>
+                <label><input type="radio" name="q21" value="3"> They become upset and accuse me of neglecting them.</label>
+                <label><input type="radio" name="q21" value="2"> They ask about my plans and seem slightly annoyed.</label>
+                <label><input type="radio" name="q21" value="1"> They respect my independence.</label>
+                <label><input type="radio" name="q21" value="0"> They encourage me to spend time with others.</label>
+            </div>
+
+            <!-- Question 22 -->
+            <div class="question">
+                <p>22. Does this person often talk about having a 'special' or 'unique' bond with you compared to others?</p>
+                <label><input type="radio" name="q22" value="3"> Yes, frequently, from the beginning.</label>
+                <label><input type="radio" name="q22" value="2"> Occasionally, but not excessively.</label>
+                <label><input type="radio" name="q22" value="1"> Rarely, they let things develop naturally.</label>
+                <label><input type="radio" name="q22" value="0"> No, they don’t make such claims early on.</label>
+            </div>
+
+            <!-- Question 23 -->
+            <div class="question">
+                <p>23. Does this person often seek admiration or praise from others, even for small accomplishments?</p>
+                <label><input type="radio" name="q23" value="3"> Yes, they constantly seek validation.</label>
+                <label><input type="radio" name="q23" value="2"> Occasionally, they like recognition.</label>
+                <label><input type="radio" name="q23" value="1"> Rarely, only for significant achievements.</label>
+                <label><input type="radio" name="q23" value="0"> No, they are humble and modest.</label>
+            </div>
+
+            <!-- Question 24 -->
+            <div class="question">
+                <p>24. How does this person react when they see someone in distress or in need of help?</p>
+                <label><input type="radio" name="q24" value="3"> They seem to enjoy others' misfortune.</label>
+                <label><input type="radio" name="q24" value="2"> They are indifferent and don’t respond.</label>
+                <label><input type="radio" name="q24" value="1"> They show concern but don’t take any action.</label>
+                <label><input type="radio" name="q24" value="0"> They immediately offer to help and show empathy.</label>
+            </div>
+
+            <!-- Question 25 -->
+            <div class="question">
+                <p>25. Does this person use personal information you’ve shared against you during arguments?</p>
+                <label><input type="radio" name="q25" value="3"> Yes, frequently.</label>
+                <label><input type="radio" name="q25" value="2"> Occasionally, in heated moments.</label>
+                <label><input type="radio" name="q25" value="1"> Rarely, only once or twice.</label>
+                <label><input type="radio" name="q25" value="0"> No, they never use my personal information against me.</label>
+            </div>
+
+            <!-- Question 26 -->
+            <div class="question">
+                <p>26. Does this person often try to control what you do, who you see, or where you go?</p>
+                <label><input type="radio" name="q26" value="3"> Very often, they want to know everything I do.</label>
+                <label><input type="radio" name="q26" value="2"> Occasionally, they ask about my plans.</label>
+                <label><input type="radio" name="q26" value="1"> Rarely, they don’t seem concerned.</label>
+                <label><input type="radio" name="q26" value="0"> Never, they respect my independence.</label>
+            </div>
+
+            <!-- Question 27 -->
+            <div class="question">
+                <p>27. Does this person exhibit different sides depending on who they are with (e.g., charming in public, harsh in private)?</p>
+                <label><input type="radio" name="q27" value="3"> Yes, there’s a noticeable difference.</label>
+                <label><input type="radio" name="q27" value="2"> Occasionally, but not drastic.</label>
+                <label><input type="radio" name="q27" value="1"> Rarely, they are mostly consistent.</label>
+                <label><input type="radio" name="q27" value="0"> No, they are the same with everyone.</label>
+            </div>
+
+            <!-- Question 28 -->
+            <div class="question">
+                <p>28. How does this person behave when things don't go their way?</p>
+                <label><input type="radio" name="q28" value="3"> They become upset, sulk, or throw a tantrum.</label>
+                <label><input type="radio" name="q28" value="2"> They express disappointment but handle it maturely.</label>
+                <label><input type="radio" name="q28" value="1"> They act indifferent and don't show much reaction.</label>
+                <label><input type="radio" name="q28" value="0"> They quickly move on without making a fuss.</label>
+            </div>
 
             <!-- Question 29 -->
             <div class="question">
@@ -104,3 +288,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
