--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 <body>
     <div class="container">
         <h1>Relationship Screening Questionnaire</h1>
+
+
+     <!-- Disclaimer at the beginning -->
+        <p class="disclaimer">
+            **Disclaimer**: This questionnaire is designed to provide general guidance and should not be used as a diagnostic tool. The results are not definitive and do not replace professional advice. If you have concerns about your relationship or mental health, please consult a qualified professional.
+        </p>
+
+        
         <form id="questionnaire">
             <!-- Question 1 -->
             <div class="question">
